# S2S

Mimi/: main.py  pyproject.toml  test_mimi.py
openai-realtime-s2s/: main.py  pyproject.toml  realtime_agent.py
