[project]
name = "mimi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"

dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "torch==2.5.1+cu121",
    "torchaudio==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]